--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "@types/react-anchor-link-smooth-scroll": "^1.0.2",
     "@types/react-dom": "^18.0.10",
     "@vitejs/plugin-react": "^3.1.0",
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.2.6",
     "typescript": "^4.9.3",
     "vite": "^4.1.0"
   }
